--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Ezen-SpringBoot CICD V003
+name: Ezen-SpringBoot CICD V4
 
 on:
   push:
@@ -26,6 +26,7 @@ jobs:
         env:
           SSH_PRIVATE_KEY: ${{ secrets.EC2_EZEN_SPRING_KEY }}
         run: |
+          set -e  # 에러 발생 시 즉시 중단
           mkdir -p ~/.ssh  # ~/.ssh 디렉토리 생성 (이미 존재해도 안전)
           echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
@@ -34,6 +35,7 @@ jobs:
       # 3. EC2에서 Git Pull 실행
       - name: Update Source Code on EC2
         run: |
+          set -e  # 에러 발생 시 즉시 중단
           ssh $USER@$HOST "
             if [ ! -d /home/ubuntu/ezen-springboot/Board ]; then
               git clone https://github.com/<username>/<repository>.git /home/ubuntu/ezen-springboot/Board
@@ -45,37 +47,28 @@ jobs:
       # 4. Gradle 빌드 전에 설정 파일 복사
       - name: Copy application.properties
         run: |
+          set -e  # 에러 발생 시 즉시 중단
           ssh $USER@$HOST "cp ~/application.properties.backup /home/ubuntu/ezen-springboot/Board/src/main/resources/application.properties"
 
       # 5. EC2에서 Gradle 빌드 실행
-      - name: Build on EC2
+      - name: Clean Project on EC2
         run: |
+          set -e  # 에러 발생 시 즉시 중단
+          ssh $USER@$HOST "cd /home/ubuntu/ezen-springboot/Board && ./gradlew clean"
+
+      - name: Build Project on EC2
+        run: |
+          set -e  # 에러 발생 시 즉시 중단
           ssh $USER@$HOST "cd /home/ubuntu/ezen-springboot/Board && ./gradlew build"
 
       # 6. EC2에서 테스트 실행
       - name: Test on EC2
         run: |
+          set -e  # 에러 발생 시 즉시 중단
           ssh $USER@$HOST "cd /home/ubuntu/ezen-springboot/Board && ./gradlew test"
 
       # 7. EC2에서 애플리케이션 배포
       - name: Deploy Application on EC2
         run: |
+          set -e  # 에러 발생 시 즉시 중단
           ssh $USER@$HOST "nohup java -jar /home/ubuntu/ezen-springboot/Board/build/libs/Board-0.0.1-SNAPSHOT.jar > /home/ubuntu/app/app.log 2>&1 &"
-
-      # # 8. 워크플로 업데이트 후 커밋 및 푸시
-      # - name: Push Workflow Updates
-      #   uses: actions/checkout@v4
-
-      # - name: Update Repository
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.EZEN_GITFLOW_TOKEN }}
-      #   run: |
-      #     git config --global user.name "Your Name"
-      #     git config --global user.email "your-email@example.com"
-      #     if [ -n "$(git status --porcelain)" ]; then
-      #       git add .github/workflows/main.yml
-      #       git commit -m "Update main.yml workflow"
-      #       git push
-      #     else
-      #       echo "No changes to commit."
-      #     fi
