--- a/Board/src/main/resources/application.properties
+++ b/Board/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=Board
 
 #DATABASE
-spring.datasource.url=jdbc:mysql://localhost:3306/Board?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
+spring.datasource.url=jdbc:mysql://localhost:3306/board_exam_1230?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=0000
